Fixes #6977: Truncate global search dropdown on small screens

--- a/netbox/project-static/styles/netbox.scss
+++ b/netbox/project-static/styles/netbox.scss
@@ -376,11 +376,9 @@ nav.search {
 
     // Object Selector Dropdown Menu
     .search-obj-selector {
-      @include media-breakpoint-down(lg) {
-        // Limit the height and enable scrolling on mobile devices.
-        max-height: 70vh;
-        overflow-y: auto;
-      }
+      // Limit the height and enable scrolling on mobile devices.
+      max-height: 70vh;
+      overflow-y: auto;
 
       .dropdown-item,
       .dropdown-header {
